test_suite/tests/ui/string/validate/unknown.stderr
error: Unknown validator `unique`.
       Possible values are `len_char_min`, `len_char_max`, `not_empty`, `predicate`, `regex`.
 --> tests/ui/string/validate/unknown.rs:3:19
  |
3 | #[nutype(validate(unique))]
  |                   ^^^^^^
